# CX-Automations

./: .gitignore  CONTRIBUTING.md  README.md
Archive/: create_new_ops_ppt.py  create_renew_ops_ppt.py  opps_viewer.py
Archive/__MACOSX/: ._opps_viewer.py
projects/: README.md
projects/project-template/: .env.example  README.md  config.example.yml  pyproject.toml
projects/project-template/docs/: runbook.md
projects/project-template/src/: main.py
projects/project-template/tests/: test_smoke.py
projects/renewal-ppt-generator/: .gitignore  README.md  config.example.yml  pyproject.toml
projects/renewal-ppt-generator/docs/: runbook.md
projects/renewal-ppt-generator/src/: create_new_ops_ppt.py  create_renew_ops_ppt.py  create_renewal_ppt.py  main.py  opps_viewer.py
projects/renewal-ppt-generator/templates/: README.md  company-template.potx
projects/renewal-ppt-generator/tests/: test_smoke.py
scripts/: new-project.ps1
shared/: README.md
