[project]
name = "renewal-ppt-generator"
version = "0.1.0"
description = "Generate renewal opportunity PowerPoints from Cisco renewals Excel exports"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "python-pptx>=0.6.23",
  "matplotlib>=3.7",
  "numpy>=1.24",
  "openpyxl>=3.1"
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
