[project]
name = "renewal-ppt-generator"
version = "0.1.0"
description = "Cisco opportunity automation scripts for renewals, new opportunities, and interactive timeline review"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "python-pptx>=0.6.23",
  "matplotlib>=3.7",
  "numpy>=1.24",
  "openpyxl>=3.1",
  "streamlit>=1.35",
  "plotly>=5.20"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
